manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: anhinga
  namespace: anhinga-namespace
  labels:
    app: anhinga
spec:
  replicas: 2
  selector:
    matchLabels:
      app: anhinga
  template:
    metadata:
      labels:
        app: anhinga
    spec:
      containers:
      - name: anhinga
        image: ghcr.io/${GITHUB_REPOSITORY_OWNER}/anhinga:latest
        ports:
        - containerPort: 80
      imagePullSecrets:
      - name: ghcr-secret
