manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: anhinga
  namespace: anhinga-namespace
spec:
  selector:
    app: anhinga
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
