manifests/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: anhinga-virtual-service
  namespace: anhinga-namespace
spec:
  hosts:
    - "*"
  gateways:
    - istio-system/ingress-gateway
  http:
    - match:
          uri:
            prefix: "/anhinga"
      rewrite:
        uri: "/index.html"
      route:
        - destination:
            host: anhinga
            port:
              number: 80
